# mtcli-atr

./: .gitignore  CONTRIBUTING.md  README.md  make.bat  mkdocs.yml  pyproject.toml
docs/: contribuindo.md  index.md
mtcli_atr/: __init__.py  atr.py  conf.py  plugin.py
mtcli_atr/controllers/: atr_controller.py
mtcli_atr/models/: atr_model.py
mtcli_atr/views/: atr_view.py
tests/: test_atr.py  test_controller.py  test_model.py  test_plugin.py  test_view.py
