[project]
name = "mtcli-atr"
version = "0.1.2"
description = "Plugin mtcli do indicador ATR"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14.0"
dependencies = [
    "mtcli>=1.18.1"
]

[project.urls]
homepage = "https://pypi.org/project/mtcli-atr"
repository = "https://github.com/vfranca/mtcli-atr"
documentation = "https://vfranca.github.io/mtcli-atr"
issues = "https://github.com/vfranca/mtcli-atr/issues"

[project.entry-points."mtcli.plugins"]
mtcli-atr = "mtcli_atr.atr:atr"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
ruff = "^0.12.11"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
pymdown-extensions = "^10.16.1"

[tool.pytest.ini_options]
addopts = "--cov=mtcli_atr --cov-report=html -ra -q"
